<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewResgistroLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/textViewResgistroLogin"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewNombreUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewNombreUsu" />

        <EditText
            android:id="@+id/editTextNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewContra1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewContra1" />

        <EditText
            android:id="@+id/editTextContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewContra2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewContra2" />

        <EditText
            android:id="@+id/editTextContrasena2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/buttonRegistrarse"
            app:iconTint="#FFFFFF" />

        <Button
            android:id="@+id/buttonIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonIniciarSesion" />

        <Button
            android:id="@+id/buttonCambiarIdioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCambiarIdioma" />
    </LinearLayout>
</LinearLayout>